--- a/app/src/main/res/layout/activity_offer_detail.xml
+++ b/app/src/main/res/layout/activity_offer_detail.xml
@@ -28,7 +28,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="44dp" />
 
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/imageViewDetail"
