--- a/app/src/main/res/layout/row_offer.xml
+++ b/app/src/main/res/layout/row_offer.xml
@@ -14,7 +14,7 @@
         android:textStyle="bold"
         android:textColor="#ffbcbcbc"
         android:textSize="22sp" />
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginRight="100dp"
